# RainbowAI

./: .env.example  API.md  Cargo.toml  points_system_schema.sql  surrealdb_schema.sql
docs/第一部分用户/: 1. 彩虹城用户权限架构方案_2.md  彩虹城后端权限系统_代码模板.md  彩虹城用户权限架构_技术实现文档.md  彩虹城用户权限架构方案.md
docs/第三部分积分与货币/: 3. 彩虹城AI伴侣积分设置机制.md  彩虹城后端整体架构集成文档_v2.md  彩虹城积分与货币机制_技术实现文档.md
docs/第二部分卡券/: 2. 彩虹城 AI 伴侣卡券机制总览表.md  彩虹城卡券机制_技术实现文档.md  彩虹城后端整体架构集成文档.md
docs/第五部分礼物赠送系统与钱包机制/: 5. 礼物赠送系统金币钱包机制.md  彩虹城后端整体架构集成文档_v4.md  彩虹城礼物赠送系统与光币钱包机制_技术实现文档.md
docs/第六部分推广机制完善/: 6. 彩虹城推广机制 · 完整方案V1.0.md  彩虹城后端整体架构集成文档_v5.md  彩虹城推广机制_技术实现文档_修正版.md
docs/第四部分积分兑换商城/: 4. 彩虹城积分兑换商城.md  彩虹城后端整体架构集成文档_v3.md  彩虹城积分兑换商城_技术实现文档.md
src/: main.rs  utils.rs
src/db/: chat.rs  mod.rs  points.rs  promoter.rs  surreal.rs
src/middleware/: auth.rs  mod.rs
src/models/: ai.rs  audit_log.rs  chat.rs  coupon.rs  gift.rs  invite.rs  lucky_card.rs  mod.rs  point_shop.rs  promoter.rs  user.rs  verification.rs  wallet_tx.rs
src/routes/: admin.rs  ai.rs  audit.rs  auth.rs  coupon.rs  friend.rs  group.rs  im.rs  invite.rs  mod.rs  points.rs  promoter.rs  store.rs  user.rs
src/services/: email_service.rs  file_storage.rs  mod.rs  points_service.rs  promoter_service.rs  websocket.rs
src/tasks/: daily_reset.rs  mod.rs
src/utils/: jwt.rs
