[package]
name = "rainbow_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = "1.0.0-beta.10"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tracing = "0.1"
tower-http = { version = "0.4", features = ["cors"] }
async-trait = "0.1"
bcrypt = "0.10"
time = "0.3"
