[package]
name = "rainbow_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "1.5.6", features = ["protocol-http"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
tracing = "0.1"
tower-http = { version = "0.4", features = ["cors"] }
async-trait = "0.1"
bcrypt = "0.10"
time = "0.3"
hyper = "0.14"
rand = "0.8"
once_cell = "1.18"
dotenv = "0.15"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
anyhow = "1.0"
futures-util = "0.3"
bytes = "1.5"
tokio-tungstenite = "0.20"
